a bit of diferent color style

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,8 +2,8 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
-$primary: #611;
-$secondary: complement($primary);
+$primary: #5e3b1c;
+$secondary: #DFC184;
 
 $header-bg: $primary; //#263347;
 $subtitle-color: lighten($primary, 58);
