--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -2,9 +2,9 @@ $noise-bg: image-url('noise.png') top left !default;
 $img-border: inline-image('dotted-border.png');
 
 // Main Link Colors
-$link-color: lighten(#165b94, 3) !default;
-$link-color-hover: adjust-color($link-color, $lightness: 10, $saturation: 25) !default;
-$link-color-visited: adjust-color($link-color, $hue: 80, $lightness: -4) !default;
+$link-color: #274557;
+$link-color-hover: #2A75A9;
+$link-color-visited: $link-color;
 $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
 
 // Main Section Colors
@@ -69,6 +69,7 @@ aside.sidebar a {
 }
 a {
   @include transition(color .3s);
+  text-decoration: none;
 }
 
 html {
