--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/">Home</a></li>
   <li><a href="{{ root_url }}/blog/categories/meetup">Meetups</a></li>
+  <li><a href="{{ root_url }}/blog/categories/rubystation">RubyStation</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
 </ul>
